<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="ke.co.sombo.apps.login.PasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_relative_layout"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/card_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/p"
            android:contentDescription="@string/app_name"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:id="@+id/email_label"
            android:textAlignment="center"
            android:textSize="18sp"
            android:transitionName="@string/email"
            tools:targetApi="21"
            android:textColor="@color/whiteText"
            android:layout_toEndOf="@id/profile_photo"
            android:maxLines="1"
            android:maxLength="30"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_edit"
            android:onClick="goToMain"
            android:layout_marginEnd="7dp"/>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="30dp"
        android:id="@+id/pass"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/card_relative_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/password"
            android:backgroundTint="@color/whiteText"
            tools:targetApi="21"
            android:inputType="textPassword"
            android:hint="@string/p_d"
            android:textColor="@color/whiteText">

            <requestFocus/>

        </EditText>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continues"
        android:id="@+id/continue_button"
        android:background="@drawable/button_bg"
        android:textColor="@color/whiteText"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/pass"
        android:layout_margin="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/continue_button"
        android:textAlignment="center"
        android:text="@string/sign_up"
        android:textColor="@color/light"
        android:textSize="16sp"
        android:textAllCaps="true"/>

</android.support.constraint.ConstraintLayout>
