<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ke.co.sombo.apps.login.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/topPanel"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/app_name"
            android:layout_centerHorizontal="true"
            android:id="@+id/pic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_below="@id/pic"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome"
            android:textColor="@color/lightOrange"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimary">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:layout_marginTop="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:labelFor="@id/pic"
                android:hint="@string/email"
                android:transitionName="@string/email"
                tools:targetApi="21"
                android:id="@+id/email"
                android:textColor="@color/whiteText">

                <requestFocus/>

            </EditText>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mail"
            android:layout_margin="30dp"
            android:text="@string/continues"
            android:textColor="@color/light"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:onClick="goToPassword"
            android:background="@drawable/button_bg"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
